--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser": "2.1.1",
     "@angular/platform-browser-dynamic": "2.1.1",
     "@angular/platform-server": "2.1.1",
-    "@ionic/storage": "1.1.6",
+    "@ionic/cloud-angular": "^0.7.0",
+    "@ionic/storage": "^1.1.6",
+    "angularfire2": "^2.0.0-beta.6",
+    "firebase": "^3.5.3",
     "ionic-angular": "2.0.0-rc.2",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
