--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "2.1.1",
     "@ionic/cloud-angular": "^0.7.0",
     "@ionic/storage": "^1.1.6",
+    "@types/lodash": "^4.14.38",
     "angularfire2": "^2.0.0-beta.6",
     "firebase": "^3.5.3",
     "ionic-angular": "2.0.0-rc.2",
